feat: repo의 update제거, user에 profileId로직 추가